k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  selector:
    app: tinyx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: social-service
spec:
  selector:
    app: tinyx
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  selector:
    app: tinyx
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: timeline-service
spec:
  selector:
    app: tinyx
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: media-service
spec:
  selector:
    app: tinyx
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: security-service
spec:
  selector:
    app: tinyx
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-service
spec:
  selector:
    app: tinyx
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: logging-service
spec:
  selector:
    app: tinyx
  ports:
    - protocol: TCP
      port: 8087
      targetPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: cache-service
spec:
  selector:
    app: tinyx
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: cleanup-service
spec:
  selector:
    app: tinyx
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: util-service
spec:
  selector:
    app: tinyx
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
